# pretty-good-laptime-simulator

./: .gitignore  README.md  great_lts_app.py  main_drag_test.py  main_laptimesim.py  optimize_gearbox.py  pretty_decent_lts_app.py  pyproject.toml  requirements.txt
helpers/: __init__.py  fastf1_data.py  simulation.py  visualization.py
laptimesim/input/tracks/: track_pars.ini
laptimesim/input/vehicles/: EH_Zapovic_Breeze.ini  F1_2025.ini  F1_2025_f1technical_shifts.ini  F1_2025_optimized_shifts.ini  F1_2026.ini  F1_Shanghai.ini  FE_Berlin.ini  MVRC_2026.ini
laptimesim/src/: _jit_kernels.py  car.py  car_electric.py  car_hybrid.py  drag_test.py  driver.py  lap.py  track.py
pages/: 1_Simple_Simulation.py  2_Advanced_Simulation.py  3_Comparison.py  3_MVRC_2026.py  4_Comparison.py  5_Parameter_Identification.py  6_Drag_Racing.py  6_Drag_Test.py
tests/: __init__.py  conftest.py  test_car.py  test_f1_2026.py  test_integration.py  test_laptimesim.py  test_opt_raceline.py  test_track.py
tests/testdata/testobjects/: testobj_f1_2026_Catalunya.pkl  testobj_f1_2026_Monza.pkl  testobj_f1_2026_Spa.pkl  testobj_laptimesim_Shanghai.pkl
trajectory_planning_helpers/: __init__.py
trajectory_planning_helpers/trajectory_planning_helpers/: __init__.py  calc_head_curv_an.py  calc_head_curv_num.py  calc_t_profile.py  calc_tangent_vectors.py  calc_vel_profile.py  calc_vel_profile_brake.py  interp_splines.py  path_matching_global.py  path_matching_local.py
