[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laptime-simulation"
version = "1.0.0"
description = "Quasi-steady-state lap time simulation for race cars with minimum curvature raceline optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alexander Heilmeier", email = "alexander.heilmeier@tum.de"},
]
keywords = ["racing", "simulation", "lap-time", "motorsport", "raceline", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.6",
    "scipy>=1.10",
    "quadprog>=0.1.11",
    "utm>=0.7",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.28",
    "plotly>=5.18",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/TUMFTM/laptime-simulation"
Repository = "https://github.com/TUMFTM/laptime-simulation"

[tool.setuptools.packages.find]
include = ["laptimesim*", "opt_raceline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
